Revert "Front: Avoid Scroll-gutter to shift content position" (#411)

--- a/front/src/styles.css
+++ b/front/src/styles.css
@@ -7,7 +7,3 @@
 		clip-path: inset(1px)
 	}
 }
-
-html {
-	overflow-y: scroll;
-}
